# NomardCoder

./: README.md
Django/: README.md  db.sqlite3  pyproject.toml
Django/#1. Note/: (#1) why Django.md  (#2) flask vs Django.md  (#3) FrameWorks vs Library.md  (#5) oop.py  (#6) underscoreMethod.py  10. App_Introduction.md  14. Relationship.md  15. SUPER RECAP.md  18. Common App.md  19. Categories.md  2. run the server.md  20. OneToOne.md  21. ORM.md  22. Reverse Accessors.md  23. Admin Pannel.md  24. views.md  25. REACT?.md  26. Django REST.md  27. Serializer.md  28. POST.md  5. Django Apps.md  7. migration.md  9. Documentation.md
Django/Note/: (#6) underscoreMethod.py  11.custom model.md  12. Custom Field.md  13. Custom admin.md  16. User Model.md  17. Room Model.md  6. models.md  8. admin.md  OOP.md  Super User.md  environment.md  migration.md  models.md  oop.py
Django/airbnb-clone-backend/: pyproject.toml
Django/airbnb-clone-backend/config/: __init__.py  settings.py
Django/bookings/: models.py
Django/bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
Django/categories/: models.py  serializers.py  urls.py  views.py
Django/common/: models.py
Django/config/: settings.py  urls.py
Django/direct_messages/: models.py
Django/experiences/: admin.py  models.py
Django/houses/: admin.py  models.py
Django/medias/: models.py
Django/reviews/: admin.py  models.py
Django/rooms/: admin.py  models.py  urls.py  views.py
Django/users/: admin.py  models.py
Django/wishlists/: admin.py  models.py
HTML/: home.html  (+2 more)
(+56 files in other folders)
