[tool.poetry]
name = "airbnb"
version = "0.1.0"
description = "Airbnb clone for backend course"
authors = ["kikiru328 <kikiru328@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
