[tool.poetry]
name = "airbnb-clone"
version = "0.1.0"
description = "NomardCoder Airbnb_Clone Challenges"
authors = ["kikiru328"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[tool.poetry.group.dev.dependencies]
black = {version = "^24.4.2", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
