[tool.poetry]
name = "airbnb"
version = "0.1.0"
description = "Django Airbnb clone NomardCoder"
authors = ["kikiru328 <kikiru328@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
pillow = "^10.3.0"
djangorestframework = "^3.15.1"


[tool.poetry.group.dev.dependencies]
black = {version = "^24.4.2", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
